syntax = "proto3";

package celestia.prover.v1;

option go_package = "provers/client";

service Prover {
  rpc Info(InfoRequest) returns (InfoResponse);
  rpc ProveStateTransition(ProveStateTransitionRequest)
      returns (ProveStateTransitionResponse);
  rpc ProveStateMembership(ProveStateMembershipRequest)
      returns (ProveStateMembershipResponse);
}

message InfoRequest {}

message InfoResponse {
  // TODO: add more info here as is relevant such as the circuit and state
  // machine types hex-encoded state transition verifier key
  string state_transition_verifier_key = 1;
  // hex-encoded state membership verifier key
  string state_membership_verifier_key = 2;
}

message ProveStateTransitionRequest {
  // For EVM chains this is the Tendermint light client contract address.
  // For Tendermint chains this is the client ID.
  string client_id = 1;
}

message ProveStateTransitionResponse {
  bytes proof = 1;
  bytes public_values = 2;
}

message ProveStateMembershipRequest {
  // For EVM chains this is the Tendermint light client contract address.
  // For Tendermint chains this is the client ID.
  string client_id = 1;
  repeated string key_paths = 2;
}

message ProveStateMembershipResponse {
  bytes proof = 1;
  int64 height = 2;
}
